Portfolio mobile nav bug fix - margin top now only on mobile.

--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -2,7 +2,6 @@
     background-color: rgb(255, 255, 255);
     height: 100vh;
     width: 100%;
-    margin-top: min(5rem, 24vw);
     /* overflow: hidden; */
 }
 
@@ -97,6 +96,10 @@
         top: 0;
         width: 100vw;
         z-index: 9;
+    }
+
+    .portfolio-container{
+        margin-top: min(5rem, 24vw);
     }
   }
 
